content/_generated-doc/2.7/config/quarkus-kubernetes-config-group-mount-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-kubernetes-config-group-mount-config_configuration]]link:#quarkus-kubernetes-config-group-mount-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-mount-config_quarkus.knative.mounts.-mounts-.name]]`link:#quarkus-kubernetes-config-group-mount-config_quarkus.knative.mounts.-mounts-.name[quarkus.knative.mounts."mounts".name]`

[.description]
--
The name of the volumeName to mount.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-mount-config_quarkus.knative.mounts.-mounts-.path]]`link:#quarkus-kubernetes-config-group-mount-config_quarkus.knative.mounts.-mounts-.path[quarkus.knative.mounts."mounts".path]`

[.description]
--
The path to mount.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-mount-config_quarkus.knative.mounts.-mounts-.sub-path]]`link:#quarkus-kubernetes-config-group-mount-config_quarkus.knative.mounts.-mounts-.sub-path[quarkus.knative.mounts."mounts".sub-path]`

[.description]
--
Path within the volumeName from which the container's volumeName should be mounted.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-mount-config_quarkus.knative.mounts.-mounts-.read-only]]`link:#quarkus-kubernetes-config-group-mount-config_quarkus.knative.mounts.-mounts-.read-only[quarkus.knative.mounts."mounts".read-only]`

[.description]
--
ReadOnly
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-mount-config_quarkus.knative.init-containers.-init-containers-.mounts.-mounts-.name]]`link:#quarkus-kubernetes-config-group-mount-config_quarkus.knative.init-containers.-init-containers-.mounts.-mounts-.name[quarkus.knative.init-containers."init-containers".mounts."mounts".name]`

[.description]
--
The name of the volumeName to mount.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-mount-config_quarkus.knative.init-containers.-init-containers-.mounts.-mounts-.path]]`link:#quarkus-kubernetes-config-group-mount-config_quarkus.knative.init-containers.-init-containers-.mounts.-mounts-.path[quarkus.knative.init-containers."init-containers".mounts."mounts".path]`

[.description]
--
The path to mount.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-mount-config_quarkus.knative.init-containers.-init-containers-.mounts.-mounts-.sub-path]]`link:#quarkus-kubernetes-config-group-mount-config_quarkus.knative.init-containers.-init-containers-.mounts.-mounts-.sub-path[quarkus.knative.init-containers."init-containers".mounts."mounts".sub-path]`

[.description]
--
Path within the volumeName from which the container's volumeName should be mounted.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-mount-config_quarkus.knative.init-containers.-init-containers-.mounts.-mounts-.read-only]]`link:#quarkus-kubernetes-config-group-mount-config_quarkus.knative.init-containers.-init-containers-.mounts.-mounts-.read-only[quarkus.knative.init-containers."init-containers".mounts."mounts".read-only]`

[.description]
--
ReadOnly
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-mount-config_quarkus.knative.containers.-containers-.mounts.-mounts-.name]]`link:#quarkus-kubernetes-config-group-mount-config_quarkus.knative.containers.-containers-.mounts.-mounts-.name[quarkus.knative.containers."containers".mounts."mounts".name]`

[.description]
--
The name of the volumeName to mount.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-mount-config_quarkus.knative.containers.-containers-.mounts.-mounts-.path]]`link:#quarkus-kubernetes-config-group-mount-config_quarkus.knative.containers.-containers-.mounts.-mounts-.path[quarkus.knative.containers."containers".mounts."mounts".path]`

[.description]
--
The path to mount.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-mount-config_quarkus.knative.containers.-containers-.mounts.-mounts-.sub-path]]`link:#quarkus-kubernetes-config-group-mount-config_quarkus.knative.containers.-containers-.mounts.-mounts-.sub-path[quarkus.knative.containers."containers".mounts."mounts".sub-path]`

[.description]
--
Path within the volumeName from which the container's volumeName should be mounted.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-mount-config_quarkus.knative.containers.-containers-.mounts.-mounts-.read-only]]`link:#quarkus-kubernetes-config-group-mount-config_quarkus.knative.containers.-containers-.mounts.-mounts-.read-only[quarkus.knative.containers."containers".mounts."mounts".read-only]`

[.description]
--
ReadOnly
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-mount-config_quarkus.kubernetes.mounts.-mounts-.name]]`link:#quarkus-kubernetes-config-group-mount-config_quarkus.kubernetes.mounts.-mounts-.name[quarkus.kubernetes.mounts."mounts".name]`

[.description]
--
The name of the volumeName to mount.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-mount-config_quarkus.kubernetes.mounts.-mounts-.path]]`link:#quarkus-kubernetes-config-group-mount-config_quarkus.kubernetes.mounts.-mounts-.path[quarkus.kubernetes.mounts."mounts".path]`

[.description]
--
The path to mount.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-mount-config_quarkus.kubernetes.mounts.-mounts-.sub-path]]`link:#quarkus-kubernetes-config-group-mount-config_quarkus.kubernetes.mounts.-mounts-.sub-path[quarkus.kubernetes.mounts."mounts".sub-path]`

[.description]
--
Path within the volumeName from which the container's volumeName should be mounted.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-mount-config_quarkus.kubernetes.mounts.-mounts-.read-only]]`link:#quarkus-kubernetes-config-group-mount-config_quarkus.kubernetes.mounts.-mounts-.read-only[quarkus.kubernetes.mounts."mounts".read-only]`

[.description]
--
ReadOnly
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-mount-config_quarkus.kubernetes.init-containers.-init-containers-.mounts.-mounts-.name]]`link:#quarkus-kubernetes-config-group-mount-config_quarkus.kubernetes.init-containers.-init-containers-.mounts.-mounts-.name[quarkus.kubernetes.init-containers."init-containers".mounts."mounts".name]`

[.description]
--
The name of the volumeName to mount.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-mount-config_quarkus.kubernetes.init-containers.-init-containers-.mounts.-mounts-.path]]`link:#quarkus-kubernetes-config-group-mount-config_quarkus.kubernetes.init-containers.-init-containers-.mounts.-mounts-.path[quarkus.kubernetes.init-containers."init-containers".mounts."mounts".path]`

[.description]
--
The path to mount.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-mount-config_quarkus.kubernetes.init-containers.-init-containers-.mounts.-mounts-.sub-path]]`link:#quarkus-kubernetes-config-group-mount-config_quarkus.kubernetes.init-containers.-init-containers-.mounts.-mounts-.sub-path[quarkus.kubernetes.init-containers."init-containers".mounts."mounts".sub-path]`

[.description]
--
Path within the volumeName from which the container's volumeName should be mounted.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-mount-config_quarkus.kubernetes.init-containers.-init-containers-.mounts.-mounts-.read-only]]`link:#quarkus-kubernetes-config-group-mount-config_quarkus.kubernetes.init-containers.-init-containers-.mounts.-mounts-.read-only[quarkus.kubernetes.init-containers."init-containers".mounts."mounts".read-only]`

[.description]
--
ReadOnly
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-mount-config_quarkus.kubernetes.sidecars.-sidecars-.mounts.-mounts-.name]]`link:#quarkus-kubernetes-config-group-mount-config_quarkus.kubernetes.sidecars.-sidecars-.mounts.-mounts-.name[quarkus.kubernetes.sidecars."sidecars".mounts."mounts".name]`

[.description]
--
The name of the volumeName to mount.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-mount-config_quarkus.kubernetes.sidecars.-sidecars-.mounts.-mounts-.path]]`link:#quarkus-kubernetes-config-group-mount-config_quarkus.kubernetes.sidecars.-sidecars-.mounts.-mounts-.path[quarkus.kubernetes.sidecars."sidecars".mounts."mounts".path]`

[.description]
--
The path to mount.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-mount-config_quarkus.kubernetes.sidecars.-sidecars-.mounts.-mounts-.sub-path]]`link:#quarkus-kubernetes-config-group-mount-config_quarkus.kubernetes.sidecars.-sidecars-.mounts.-mounts-.sub-path[quarkus.kubernetes.sidecars."sidecars".mounts."mounts".sub-path]`

[.description]
--
Path within the volumeName from which the container's volumeName should be mounted.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-mount-config_quarkus.kubernetes.sidecars.-sidecars-.mounts.-mounts-.read-only]]`link:#quarkus-kubernetes-config-group-mount-config_quarkus.kubernetes.sidecars.-sidecars-.mounts.-mounts-.read-only[quarkus.kubernetes.sidecars."sidecars".mounts."mounts".read-only]`

[.description]
--
ReadOnly
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-mount-config_quarkus.openshift.mounts.-mounts-.name]]`link:#quarkus-kubernetes-config-group-mount-config_quarkus.openshift.mounts.-mounts-.name[quarkus.openshift.mounts."mounts".name]`

[.description]
--
The name of the volumeName to mount.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-mount-config_quarkus.openshift.mounts.-mounts-.path]]`link:#quarkus-kubernetes-config-group-mount-config_quarkus.openshift.mounts.-mounts-.path[quarkus.openshift.mounts."mounts".path]`

[.description]
--
The path to mount.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-mount-config_quarkus.openshift.mounts.-mounts-.sub-path]]`link:#quarkus-kubernetes-config-group-mount-config_quarkus.openshift.mounts.-mounts-.sub-path[quarkus.openshift.mounts."mounts".sub-path]`

[.description]
--
Path within the volumeName from which the container's volumeName should be mounted.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-mount-config_quarkus.openshift.mounts.-mounts-.read-only]]`link:#quarkus-kubernetes-config-group-mount-config_quarkus.openshift.mounts.-mounts-.read-only[quarkus.openshift.mounts."mounts".read-only]`

[.description]
--
ReadOnly
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-mount-config_quarkus.openshift.init-containers.-init-containers-.mounts.-mounts-.name]]`link:#quarkus-kubernetes-config-group-mount-config_quarkus.openshift.init-containers.-init-containers-.mounts.-mounts-.name[quarkus.openshift.init-containers."init-containers".mounts."mounts".name]`

[.description]
--
The name of the volumeName to mount.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-mount-config_quarkus.openshift.init-containers.-init-containers-.mounts.-mounts-.path]]`link:#quarkus-kubernetes-config-group-mount-config_quarkus.openshift.init-containers.-init-containers-.mounts.-mounts-.path[quarkus.openshift.init-containers."init-containers".mounts."mounts".path]`

[.description]
--
The path to mount.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-mount-config_quarkus.openshift.init-containers.-init-containers-.mounts.-mounts-.sub-path]]`link:#quarkus-kubernetes-config-group-mount-config_quarkus.openshift.init-containers.-init-containers-.mounts.-mounts-.sub-path[quarkus.openshift.init-containers."init-containers".mounts."mounts".sub-path]`

[.description]
--
Path within the volumeName from which the container's volumeName should be mounted.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-mount-config_quarkus.openshift.init-containers.-init-containers-.mounts.-mounts-.read-only]]`link:#quarkus-kubernetes-config-group-mount-config_quarkus.openshift.init-containers.-init-containers-.mounts.-mounts-.read-only[quarkus.openshift.init-containers."init-containers".mounts."mounts".read-only]`

[.description]
--
ReadOnly
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-mount-config_quarkus.openshift.sidecars.-sidecars-.mounts.-mounts-.name]]`link:#quarkus-kubernetes-config-group-mount-config_quarkus.openshift.sidecars.-sidecars-.mounts.-mounts-.name[quarkus.openshift.sidecars."sidecars".mounts."mounts".name]`

[.description]
--
The name of the volumeName to mount.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-mount-config_quarkus.openshift.sidecars.-sidecars-.mounts.-mounts-.path]]`link:#quarkus-kubernetes-config-group-mount-config_quarkus.openshift.sidecars.-sidecars-.mounts.-mounts-.path[quarkus.openshift.sidecars."sidecars".mounts."mounts".path]`

[.description]
--
The path to mount.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-mount-config_quarkus.openshift.sidecars.-sidecars-.mounts.-mounts-.sub-path]]`link:#quarkus-kubernetes-config-group-mount-config_quarkus.openshift.sidecars.-sidecars-.mounts.-mounts-.sub-path[quarkus.openshift.sidecars."sidecars".mounts."mounts".sub-path]`

[.description]
--
Path within the volumeName from which the container's volumeName should be mounted.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-mount-config_quarkus.openshift.sidecars.-sidecars-.mounts.-mounts-.read-only]]`link:#quarkus-kubernetes-config-group-mount-config_quarkus.openshift.sidecars.-sidecars-.mounts.-mounts-.read-only[quarkus.openshift.sidecars."sidecars".mounts."mounts".read-only]`

[.description]
--
ReadOnly
--|boolean 
|`false`

|===